--- a/outbounds/templates/outbounds/outbounds.html
+++ b/outbounds/templates/outbounds/outbounds.html
@@ -361,7 +361,7 @@
                                 <a href=""><img src="{{city.thumbnail.url}}"
                                         alt="img"></a>
                                 <div class="top_destinations_box_content">
-                                    <h4><a href="top-destinations-details.html">{{ city.name }}</a></h4>
+                                    <h4><a href="{% url 'outbound-detail' city.slug %}">{{ city.name }}</a></h4>
                                     <p><span class="review_rating">4.8/5 Excellent</span> <span
                                             class="review_count">(1214
                                             reviewes)</span></p>
