--- a/tour/templates/tour/all_tours_grid.html
+++ b/tour/templates/tour/all_tours_grid.html
@@ -1477,11 +1477,11 @@
                         <div class="col-lg-4 col-md-6 col-sm-6 col-12">
                             <div class="theme_common_box_two img_hover">
                                 <div class="theme_two_box_img">
-                                    <a href="{% url 'tour-detail' tour.slug %}"><img src="/static/assets/img/tab-img/hotel1.png" alt="img"></a>
-                                    <p><i class="fas fa-map-marker-alt"></i>New beach, Thailand</p>
+                                    <a href="{% url 'tour-detail' tour.slug %}"><img src="{{ tour.thumbnail.url }}" alt="img"></a>
+                                    <p><i class="fas fa-map-marker-alt"></i>{{ tour.location }}</p>
                                 </div>
                                 <div class="theme_two_box_content">
-                                    <h4><a href="{% url 'tour-detail' %}">Kantua hotel, Thailand</a></h4>
+                                    <h4><a href="{% url 'tour-detail' tour.slug %}">{{ tour.name }}</a></h4>
                                     <p><span class="review_rating">4.8/5 Excellent</span> <span
                                             class="review_count">(1214
                                             reviewes)</span></p>
