--- a/tour/templates/tour/tbookingForm.html
+++ b/tour/templates/tour/tbookingForm.html
@@ -223,7 +223,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tour_detail_right_sidebar">
+                        <div class="tour_detail_right_sidebar" id="personData">
                             <div class="tour_details_right_boxed">
                                 <div class="tour_details_right_box_heading">
                                     <h3>Travel date</h3>
@@ -232,6 +232,7 @@
                                     <div class="form-group">
                                         <label for="dates">Edit Date</label>
                                         <input type="date" id="dates" value="2022-05-05" class="form-control">
+                                        <span>{% verbatim %} {{ BookingDate }} {% endverbatim %} </span>
                                     </div>
                                 </div>
                                 <div class="tour_package_details_bar_list">
@@ -242,7 +243,7 @@
                                             <p>12y+</p>
                                         </div>
                                         <div class="select_person_right">
-                                            <h6>01</h6>
+                                            <h6>{% verbatim %} {{ Adult }} {% endverbatim %}</h6>
                                         </div>
                                     </div>
 
@@ -252,7 +253,7 @@
                                             <p>2 - 12 years</p>
                                         </div>
                                         <div class="select_person_right">
-                                            <h6>01</h6>
+                                            <h6>{% verbatim %} {{ Children }} {% endverbatim %}</h6>
                                         </div>
                                     </div>
                                     <div class="select_person_item">
@@ -261,7 +262,7 @@
                                             <p>Below 2 years</p>
                                         </div>
                                         <div class="select_person_right">
-                                            <h6>01</h6>
+                                            <h6>{% verbatim %} {{ Infant }} {% endverbatim %}</h6>
                                         </div>
                                     </div>
                                 </div>
@@ -331,8 +332,9 @@
 
 
     {% block custom_script %}
-
+    <script src="https://unpkg.com/vue@next"></script>
     <script src="assets/js/payment-form.js"></script>
+    <script src="{% static 'assets/js/custom-vue.js' %}"></script>
     {% endblock %}
 
     {% endblock main %}
