--- a/frontend/templates/frontend/base.html
+++ b/frontend/templates/frontend/base.html
@@ -104,7 +104,7 @@
 
 
 
-    <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    
     <script src="{% static 'assets/js/jquery-3.6.0.min.js' %}"></script>
     <!-- Bootstrap js -->
     <script src="{% static 'assets/js/bootstrap.bundle.js' %}"></script>
@@ -120,7 +120,7 @@
     <script src="{% static 'assets/js/custom.js' %}"></script>
     <script src="{% static 'assets/js/add-form.js' %}"></script>
     <script src="{% static 'assets/js/video.js' %}"></script>
-    
+    <script src="https://unpkg.com/vue@next"></script>
     
     {% block custom_script %}
     {% endblock custom_script %}
