--- a/tour/templates/tour/tbookingForm.html
+++ b/tour/templates/tour/tbookingForm.html
@@ -223,7 +223,8 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="tour_detail_right_sidebar" id="personData">
+                    <div id="personData">
+                        <div class="tour_detail_right_sidebar" >
                             <div class="tour_details_right_boxed">
                                 <div class="tour_details_right_box_heading">
                                     <h3>Travel date</h3>
@@ -298,25 +299,27 @@
 
                                 <div class="tour_booking_amount_area">
                                     <ul>
-                                        <li>Adult Price x 1 <span>$40,000.00</span></li>
-                                        <li>Discount <span>-10%</span></li>
-                                        <li>Tax<span>5%</span></li>
+                                        <li>Adult Price x {% verbatim %} {{ Adult }} {% endverbatim %}<span>{% verbatim %} {{ adultTotal }} {% endverbatim %}</span></li>
+                                        <li>Child Price x {% verbatim %} {{ Children }} {% endverbatim %}<span>{% verbatim %} {{ childTotal }} {% endverbatim %}</span></li>
+                                        <li>Discount <span>-</span></li>
+                                        <li>Tax Included<span>5%</span></li>
                                     </ul>
                                     <div class="tour_bokking_subtotal_area">
-                                        <h6>Subtotal <span>$38,000.00</span></h6>
+                                        <h6>Subtotal <span><sup>AED </sup>{% verbatim %} {{ subTotal }} {% endverbatim %}</span></h6>
                                     </div>
                                     <div class="coupon_add_area">
-                                        <h6><span class="remove_coupon_tour">Remove</span> Coupon code (OFF 5000)
-                                            <span>$5,000.00</span>
+                                        <h6><span class="remove_coupon_tour">Remove</span> Coupon code (ANT)
+                                            <span>--</span>
                                         </h6>
                                     </div>
                                     <div class="total_subtotal_booking">
-                                        <h6>Total Amount <span>$33,000.00</span> </h6>
+                                        <h6>Total Amount <span><sup>AED </sup>{% verbatim %} {{ subTotal }} {% endverbatim %}</span> </h6>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
             </div>
