--- a/frontend/templates/frontend/about.html
+++ b/frontend/templates/frontend/about.html
@@ -29,19 +29,15 @@
                 <div class="col-lg-6">
                     <div class="about_us_left">
                         <h5>About us</h5>
-                        <h2>We Are The World Best Travel Agency Company Since 2000</h2>
-                        <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                            no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
-                            dolor sit amet, consetetur sadipscing elitr </p>
-                        <p>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-                            no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum
-                            dolor sit amet, consetetur sadipscing elitr </p>
-                        <a href="tour-search.html" class="btn btn_theme btn_md">Find tours</a>
+                        <h2>Arabian Nights Tours Travel Agency Company Since 2000</h2>
+                        <p>A modern oasis born from the desert sands, presenting the most lavish luxuries the world has to offer along with the mysteries and wonders of the east. At Arabian Nights Tours we firmly believe that our most precious possessions are our memories, the moments that we hold dear to our hearts, the experiences that bring smiles to our faces every time we look back at them. This is what we are in the business of creating, ever lasting memories that you can share with your friends and family. We carefully craft every moment you spend with us, combining niche, cultural and shopping tourism in one of the world’s richest tourist destinations, together with first class treatment and hospitality a truly once in a lifetime experience that is bound to fill your treasure trove with memories and experiences that you can forever cherish. </p>
+                        
+                        <a href="{% url 'all-tours-grid' %}" class="btn btn_theme btn_md">Find tours</a>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="about_us_right">
-                        <img src="assets/img/common/abour_right.png" alt="img">
+                        <img src="/static/assets/img/about/about-us.jpg" alt="img">
                     </div>
                 </div>
 
@@ -56,12 +52,12 @@
                 <h2 class="d-none">Heading</h2>
                 <div class="col-lg-4">
                     <div class="about_offer_banner">
-                        <a href="!#"><img src="assets/img/common/small_banner.png" alt="img"></a>
+                        <a href="!#"><img src="/static/assets/img/common/small_banner.png" alt="img"></a>
                     </div>
                 </div>
                 <div class="col-lg-8">
                     <div class="about_offer_banner">
-                        <img src="assets/img/common/big_banner.png" alt="img">
+                        <img src="/static/assets/img/common/big_banner.png" alt="img">
                         <div class="about_offer_text">
                             <h3>Enjoy <span>20%</span> discount</h3>
                             <h2>Thailand couple tour</h2>
@@ -80,7 +76,7 @@
             <div class="row">
                 <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                     <div class="about_service_boxed">
-                        <img src="assets/img/icon/world.png" alt="img">
+                        <img src="/static/assets/img/icon/world.png" alt="img">
                         <h5><a href="#!">Best services</a></h5>
                         <p>Phaseus site amet tristique ligua donec iaculis leo sus cipit. Consec tetur adipiscing elit.
                             Incididunt ut dolore.</p>
@@ -88,7 +84,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                     <div class="about_service_boxed">
-                        <img src="assets/img/icon/walte.png" alt="img">
+                        <img src="/static/assets/img/icon/walte.png" alt="img">
                         <h5><a href="#!">Trusted payment</a></h5>
                         <p>Phaseus site amet tristique ligua donec iaculis leo sus cipit. Consec tetur adipiscing elit.
                             Incididunt ut dolore.</p>
@@ -96,7 +92,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                     <div class="about_service_boxed">
-                        <img src="assets/img/icon/star.png" alt="img">
+                        <img src="/static/assets/img/icon/star.png" alt="img">
                         <h5><a href="#!">Top facility</a></h5>
                         <p>Phaseus site amet tristique ligua donec iaculis leo sus cipit. Consec tetur adipiscing elit.
                             Incididunt ut dolore.</p>
@@ -104,7 +100,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-12 col-12">
                     <div class="about_service_boxed">
-                        <img src="assets/img/icon/persentis.png" alt="img">
+                        <img src="/static/assets/img/icon/persentis.png" alt="img">
                         <h5><a href="#!">Awesome deals</a></h5>
                         <p>Phaseus site amet tristique ligua donec iaculis leo sus cipit. Consec tetur adipiscing elit.
                             Incididunt ut dolore.</p>
@@ -140,29 +136,29 @@
                         <div class="row">
                             <div class="col-lg-3 col-md-6 clo-sm-12 col-12">
                                 <div class="counter_item">
-                                    <img src="assets/img/icon/user.png" alt="icon">
+                                    <img src="/static/assets/img/icon/user.png" alt="icon">
                                     <h3 class="counter">2348</h3>
                                     <h6>Partners</h6>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 clo-sm-12 col-12">
                                 <div class="counter_item">
-                                    <img src="assets/img/icon/bank.png" alt="icon">
-                                    <h3 class="counter">1748</h3>
+                                    <img src="/static/assets/img/icon/bank.png" alt="icon">
+                                    <h3 class="counter">500</h3>
                                     <h6>Listed property</h6>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 clo-sm-12 col-12">
                                 <div class="counter_item">
-                                    <img src="assets/img/icon/world-map.png" alt="icon">
-                                    <h3 class="counter">4287</h3>
+                                    <img src="/static/assets/img/icon/world-map.png" alt="icon">
+                                    <h3 class="counter">50</h3>
                                     <h6>Destinations</h6>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-6 clo-sm-12 col-12">
                                 <div class="counter_item">
-                                    <img src="assets/img/icon/calander.png" alt="icon">
-                                    <h3 class="counter">40</h3>
+                                    <img src="/static/assets/img/icon/calander.png" alt="icon">
+                                    <h3 class="counter">50</h3>
                                     <h6>Booking</h6>
                                 </div>
                             </div>
@@ -186,7 +182,7 @@
                     <div class="all_review_box">
                         <div class="all_review_date_area">
                             <div class="all_review_date">
-                                <h5>08 Dec, 2021</h5>
+                                <h5>08 Dec, 2022</h5>
                             </div>
                             <div class="all_review_star">
                                 <h5>Excellent</h5>
@@ -200,7 +196,7 @@
                             </div>
                         </div>
                         <div class="all_review_text">
-                            <img src="assets/img/review/review6.png" alt="img">
+                            <img src="/static/assets/img/review/review6.png" alt="img">
                             <h4>Jesica simpsn</h4>
                             <span>Tourist</span>
                             <p>" Loved the overall tour for all 6 days covering jaipur jodhpur and jaisalmer. worth ur
@@ -227,7 +223,7 @@
                             </div>
                         </div>
                         <div class="all_review_text">
-                            <img src="assets/img/review/review6.png" alt="img">
+                            <img src="/static/assets/img/review/review6.png" alt="img">
                             <h4>Santa mariam</h4>
                             <span>traveler</span>
                             <p>" Loved the overall tour for all 6 days covering jaipur jodhpur and jaisalmer. worth ur
