--- a/frontend/templates/frontend/home.html
+++ b/frontend/templates/frontend/home.html
@@ -326,7 +326,7 @@
                                     <li><a href="#!">Discover your all UAE tours with us!</a></li>
                                     <li><a href="#!">City tours of Dubai , Abu Dhabi, and Sharjah</a></li>
                                     <li><a href="#!">Hot air balloon rides over the desert</a></li>
-                                    <li><a href="#!">Desert safaris and dune bashinge</a></li>
+                                    <li><a href="#!">Desert safaris and dune bashing</a></li>
                                     <li><a href="#!">Camel and horseback riding tours</a></li>
                                     <li><a href="#!">Shopping and dining tours</a></li>
                                     <li><a href="#!">Adventure and water sports tours</a></li>
@@ -755,6 +755,10 @@
     </section>
 
 
+
+
+    {% include 'frontend/whatsapp.html' %}
+    
     {% include 'frontend/newsletter.html' %}
    
     {% include 'frontend/footer.html' %}
