--- a/tour/templates/tour/tourdetails.html
+++ b/tour/templates/tour/tourdetails.html
@@ -728,7 +728,7 @@
                      <p></p>
                  </div>
                  <div class="select_person_right">
-                     Aed : {% verbatim %} {{ subTotal }} {% endverbatim %}
+                     AED : {% verbatim %} {{ subTotal }} {% endverbatim %}
                  </div>
                  
              </div>
