--- a/frontend/templates/frontend/header.html
+++ b/frontend/templates/frontend/header.html
@@ -114,13 +114,13 @@
                                 
                             </li>
                             <li class="nav-item">
-                                <a href="#" class="nav-link">
+                                <a href="{% url 'visa-info' %}" class="nav-link">
                                     Visa
                                     <i class="fas fa-angle-down"></i>
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li class="nav-item">
-                                        <a href="visa-details.html" class="nav-link">Visa Details</a>
+                                        <a href="{% url 'visa-detail' %}" class="nav-link">Visa Details</a>
                                     </li>
                                     <li class="nav-item">
                                         <a href="visa-application.html" class="nav-link">Visa Application</a>
